2020-10-19 Wiley E. Hill <wileyhill@gmail.com>

    * include/gschem_page_view.h: Remove GdkGC member.

    * src/base/gschem_page_view.c: Remove function gschem_page_view_get_gc.

2020-10-17 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Arabic translations.
    * po/bg.po: Update Bulgarian translations.
    * po/de.po: Update German translations.
    * po/el.po: Update Greek translations
    * po/fr.po: Update French translations.
    * po/hu.po: Update Hungarian translations.
    * po/ml.po: Updated Malayalam translations.
    * po/zh_CN.po: Update Chinese simplified translations.
    * po/zh_TW.po: Update Chinese traditional translations.

2020-10-16 Wiley E. Hill <wileyhill@gmail.com>

    * include/prototype.h: Declare functions in x_recent_menu.c.

    * src/x/x_menus.c: Add todo documentation templates, add function
      documentation:

        * x_menu_display_main_popup
        * x_menu_set_grid_radio

    * src/x/x_window.c: Update x_recent_menu_ function prefix.

2020-10-15 Wiley E. Hill <wileyhill@gmail.com>

    * po/POTFILES.in: Include new module x_recent_menu.c.

    * src/x/x_menus.c: Add function x_menu_get_ui_list.

    * src/x/x_recent_menu.c: Add new module with code for the recent menu
      relocated from x_menus.c.

2020-10-14 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/g_funcs.c: Change int successes to bool in g_funcs_postscript
      and g_funcs_print. Revise g_funcs_output_type to eliminate second
      conditional.

2020-10-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/: Reformat function documentation:

        * src/guile/g_rc.c
        * src/guile/g_select.c

    * src/guile/g_action.c: Add function documentation:

        * g_process_action

    * src/guile/g_register.c: Remove static specifier from action_list in
      g_register_funcs.

2020-10-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/guile/: Reformat function documentation:

        * src/guile/g_action.c
        * src/guile/g_attrib.c